--- a/templates/opt/graphite/conf/carbon.conf.erb
+++ b/templates/opt/graphite/conf/carbon.conf.erb
@@ -214,6 +214,16 @@ AMQP_METRIC_NAME_IN_BODY = <%= scope.lookupvar('graphite::gr_amqp_metric_name_in
 # from [carbon] section.
 # You can then specify the --instance=b option to manage this instance
 
+[cache:1]
+LINE_RECEIVER_PORT = 2013
+PICKLE_RECEIVER_PORT = 2014
+CACHE_QUERY_PORT = 7012
+
+[cache:2]
+LINE_RECEIVER_PORT = 2023
+PICKLE_RECEIVER_PORT = 2024
+CACHE_QUERY_PORT = 7022
+
 
 [relay]
 # Enable daily log rotation. If disabled, a kill -HUP can be used after a manual rotate
